infra/k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: v1
kind: Namespace
metadata:
  name: product
---
apiVersion: v1
kind: Namespace
metadata:
  name: cart
---
apiVersion: v1
kind: Namespace
metadata:
  name: order
---
apiVersion: v1
kind: Namespace
metadata:
  name: payment
---
apiVersion: v1
kind: Namespace
metadata:
  name: notification
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra
